# vvz-supernova

./: .flake8  .gitignore  LICENSE  README.md  data-store  pyproject.toml
.cursor/rules/: science.mdc  search.mdc  standards.mdc
docs/: DATA_SOURCES_AND_ALGORITHMS.md  IMPLEMENTATION_SPEC.md  PIPELINE_PLAN.md  PROJECT_STRUCTURE.md  README.md  SOURCE_FIELD_VERIFICATION.md  TECH_SPEC.md  Third_tech_spec.md  task_supernova_atomic_pipeline.txt
docs/chapters/: 7d-131-Окно_наблюдаемости_и_полевые_потоки_масштабного_закона.md  (+2 more)
report/: atomic_two_frequency_report.md  data_report.md  missingness_report.csv  source_manifest.csv
scripts/: __init__.py  build_archive.py  build_astrophysical_flash_passports.py  build_astrophysical_transient_events.py  build_atomic_transition_events.py  build_atomic_transition_passports.py  build_atomic_two_frequency_analysis.py  build_cluster_ready.py  build_cluster_ready_transition_passports.py  build_event_summaries.py  build_fourth_spec_report.py  build_supernova_transient_events.py  build_third_spec_report.py  build_unified_transition_passports.py  check_source_fields.py  clean_astrophysical_transient_data.py  clean_atomic.py  clean_atomic_data.py  clean_supernova.py  clean_supernova_data.py  download_astrophysical_transient_data.py  download_atomic.py  download_atomic_data.py  download_atomic_isotope_data.py  download_supernova.py  download_supernova_data.py  ensure_dirs.py  generate_plots.py  verify_pipeline_data.py  verify_raw_downloads.py
supernova_atomic/: __init__.py  astrophysical_passport_rows.py  atomic_isotope_download.py  atomic_isotope_parsing.py  atomic_schema.py  atomic_two_frequency_analysis.py  fourth_spec_report.py  nist_parser.py  oac_event_artifacts.py  passport_schema.py  supernova_osc_io.py  supernova_raw_ingest.py  third_spec_schema.py
tests/: test_atomic_pipeline_verification.py  test_raw_download_verification.py  test_source_field_checks.py  test_supernova_time_domain_pipeline.py  test_theory_search_engine.py
(+69 files in other folders)
